@@ -14,6 +14,10 @@ Release 3.11.0 is under development, not yet released.
 
 * ==================== OTHER CHANGES ====================
 
+* Address description logic (used by memcheck and helgrind)
+  now describes anonymous or file mmap-ed segments and
+  shared memory segments.
+
 * Option --error-markers=<begin>,<end> can be used to mark
   the begin/end of errors in textual output mode, to facilitate
   searching/extracting errors in output files mixing valgrind
